tests/compilation/examples/fail_oops.stderr
error: failed
 --> tests/compilation/examples/fail_oops.rs:3:1
  |
3 | #[oops]
  | ^^^^^^^
  |
help: haha
 --> tests/compilation/examples/fail_oops.rs:3:1
  |
3 | #[oops]
  | ^^^^^^^
  = note: this error originates in the attribute macro `oops` (in Nightly builds, run with -Z macro-backtrace for more info)
